--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   ],
   "author": "Romain Mougel",
   "license": "MIT",
-  "dependencies": {
-    "redis": "^2.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-plugin-jasmine": "^2.10.1",
-    "jasmine": "^3.3.1"
+    "jasmine": "^3.3.1",
+    "redis": "^2.8.0"
   }
 }
