--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "jasmine --config=jasmine.json",
     "eslint": "./node_modules/.bin/eslint ."
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atmys/vcaptcha.git"
+  },
   "keywords": [
     "node.js",
     "captcha"
@@ -19,5 +23,9 @@
     "eslint-plugin-jasmine": "^2.10.1",
     "jasmine": "^3.3.1",
     "redis": "^2.8.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/atmys/vcaptcha/issues"
+  },
+  "homepage": "https://github.com/atmys/vcaptcha#readme"
 }
